# efl-app-skeletons

./: README  eina_trash.c
app/: COPYING  Makefile.am  NEWS  README  TODO  configure.ac  elm-skel.pc.in  elm_skel.pc.in  my_app.pc.in
app/data/desktop/: Makefile.am  elm-skel.desktop.in  elm_skel.desktop.in  my_app.desktop.in
app/data/images/: Makefile.am
app/data/themes/: Makefile.am
app/data/themes/default/: Makefile.am  default.edc
app/doc/: Makefile.am  main.lou
app/m4/: elm_quicklaunch.m4
app/src/: Makefile.am  Makefile_bin.am  Makefile_lib.am
app/src/lib/: Lib.h  Makefile.am  elm_skel.c  elm_skel.h  elm_skel_app.c  elm_skel_app.h  lib.c  lib_private.h
app/src/tests/: elm_skel_suite.c  my_app_suite.c
lib/: COPYING  Makefile.am  NEWS  README  configure.ac  my_lib.pc.in
lib/m4/: project_init.m4
lib/src/: Makefile.am  Makefile_lib.am
lib/src/lib/: My_Lib.h  my_lib.c  my_lib_private.h
lib/src/lib/.deps/: lib_libmy_lib_la-lib.Plo
lib/src/tests/: my_lib_suite.c
